# ffi_bug

./: Cargo.toml  test_function.cpp  test_function.h
src/: generated.rs  main.rs
