[package]
name = "ffi_bug"
version = "0.1.0"
authors = ["dneumair <david.neumair@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.56.0"
cc = "1.0.66"

[dependencies]
bindgen = "0.56.0"
cc = "1.0.66"